GDB-13858 fix button overlap in shepherd dialog
## What
Fix the copy button overlapping the scroll

## Why
The button is absolutely positioned and, when a scroll is present, it doesn't push it do the side.

## How
Changed the positioning of the button 15 pixels to the left to have room for a scroll

## Testing
n/a

--- a/packages/legacy-workbench/src/css/shepherd-custom.css
+++ b/packages/legacy-workbench/src/css/shepherd-custom.css
@@ -109,7 +109,7 @@
 .shepherd-code button {
     position: absolute;
     bottom: 5px;
-    right: 5px;
+    right: 20px;
 }
 
 .guide-dialog.shepherd-element[data-popper-placement="top"] {
